Edits and corrections

--- a/docs/write_up/JDM_mixed_fishery_letter.tex
+++ b/docs/write_up/JDM_mixed_fishery_letter.tex
@@ -66,12 +66,12 @@ spatial community and fishery dynamics interact to determine species and size
 composition.  
 %%	 Two or three sentences explaining what the main result
 In the example application to the highly mixed fisheries of the Celtic Sea,
-clear common spatial patterns emerge for three distinct species-groups and,
-while distribution varies inter-annually, the same species-groups are
-consistently found in higher densities together, with more subtle differences
-within species-groups - where spatial separation may not be practically
-possible. \deleted{The results highlight both opportunities for and limitations
-	of the ability to spatiotemporally separate catches.}
+clear common spatial patterns emerge for three distinct species-groups. While
+distribution varies inter-annually, the same species-groups are consistently
+found in higher densities together, with more subtle differences within
+species-groups - where spatial separation may not be practically possible.
+\deleted{The results highlight both opportunities for and limitations of the
+	ability to spatiotemporally separate catches.}
 %%  general context
 We highlight the importance of dimension reduction techniques to focus
 management discussion on axes of maximal separation in space and time. We
@@ -88,11 +88,11 @@ fisheries.
 have begun the process of rebuilding depleted fish populations\cite{Worm2009}.
 Improved fisheries management\deleted{has the potential to} can increase
 population sizes and allow increased sustainable catches, yet fisheries catch
-globally remains stagnant\cite{FAO2016}. With future increased demand for fish
+globally remains static\cite{FAO2016}. With future increased demand for fish
 protein\deleted{\cite{B??n??2016}} there is an important role for well managed
 fisheries in supporting future food
 security\cite{Mcclanahan2015}\deleted[id=coilin]{and}\deleted{there}
-\replaced[id=coilin]{necessitating }{remains a need to ensure}fisheries are
+\replaced[id=coilin]{necessitating}{remains a need to ensure}fisheries are
 managed efficiently to maximise productivity.
 
 A\deleted[id = brutus]{particular} challenge in realising increased catches
@@ -106,7 +106,7 @@ available stock quotas, either a vessel must stop fishing when the first quota
 is reached (the `choke' species) or overexploitation of the weaker species
 occurs while fishers \deleted{continue to} catch more healthy species and throw
 back (`discard') the fish for which they have no quota\cite{Batsleer2015}.
-There is\deleted{, therefore,} a pressing need for scientific tools which
+There is\deleted{, therefore,} a pressing need for scientific tools that
 simplify the complexities of mixed fisheries to help \replaced[id =
 coilin]{avoid discarding}{managers and fishers maximise catches}. 
 
@@ -157,10 +157,10 @@ community interactions\deleted{combining}; \deleted{The design of
 	high quota stocks while protecting low quota stocks requires
 	understanding of these interactions at a scale meaningful to managers
 	and fishers.}\deleted{Here,} our goal is to develop a framework for
-understanding these complexities. We do so by implementing a spatio-temporal
-dimension reduction method and use \deleted{the} results to draw inference on
-the fishery-community dynamics, creating a framework to identify trends common
-among species\deleted{. We use this to} and describe \replaced[id =
+understanding these complexities. We do so by 1) implementing a spatiotemporal
+dimension reduction method, 2) using\deleted{the} results to draw inference on
+the fishery-community dynamics, 3) creating a framework to identify trends common
+among species\deleted{. We use this to}, and 4) describing \replaced[id =
 coilin]{the potential for and limitations of}{where} spatial measures
 \replaced[id = coilin]{to}{can contribute to} mitigate\deleted{ing} unwanted
 catches in highly mixed fisheries.
@@ -198,8 +198,8 @@ is a temperate sea where fisheries are spatially and temporally
 complex\deleted{; mixed fisheries are undertaken by several nations using
 	different gear types}\cite{Ellis2000, Gerritsen2012}. Close to 150
 species have been identified in the commercial catches of the Celtic Sea, with
-approximately 30 species dominating the catch\cite{Mateo2016}. We parametrise
-our \deleted{spatiotemporal} model using catch data from seven
+approximately 30 species dominating the catch\cite{Mateo2016}. We parameterise
+our\deleted{spatiotemporal} model using catch data from seven
 fisheries-independent surveys undertaken\deleted{in the Celtic Sea} over the
 period 1990 - 2015 (Extended Data Table 1) and include nine of the main
 commercial species (see Extended Data Table 2, Fig. 2) \deleted{: Atlantic cod
@@ -292,7 +292,7 @@ brutus]{, as identified in other marine species distribution
 	the spatial factor analysis can adequately characterise these
 	influences on species spatial dynamics.}
 
-\subsection{\replaced[id = Paul]{Time varying species distributions, but
+\subsection{\replaced[id = Paul]{Time-varying species distributions, but
 		stability within species groups}{Changes in spatial patterns
 		over time, but stability in species dynamics}}\deleted{While
 	there are clear spatial patterns in the factor coefficients describing
@@ -466,23 +466,25 @@ spatial separation of catches is \deleted[id = brutus]{much more challenging
 the selectivity characteristics of gear\cite{Santos2016}. 
 
 A role that science can play in supporting effectiveness of spatiotemporal
-avoidance could be in providing probabilistic advice on \deleted{likely}
-hotspots for species\deleted{occurrence and high species density} which can
-inform fishing decisions. Previous modelling studies have shown how
-spatiotemporal models could improve predictions of high ratios of bycatch
-species to target species\cite{Ward2015, Cosandey-Godin2015, Breivik2016}, and
-geostatistical models are well suited\deleted{to this} as they incorporate
-spatial dependency while providing for probabilities to be drawn from posterior
-distributions of the parameter estimates. We posit\deleted{that} such advice
-could be enhanced by integrating data obtained directly from commercial fishing
-vessels at a higher temporal resolution, providing real-time forecasts to
-inform fishing choices that also captures seasonal differences in
-distributions\deleted{, akin to weather forecasting}. \added{Such}
-advice\deleted{informed by a model including a seasonal or real-time component}
-could inform optimal policies for time-area closures, move-on rules or even as
-informal information\deleted{to be} utilised by fishers directly without being
-reliant on costly continuous data collection on environmental
-parameters\deleted{, but by using the vessels-as-laboratories approach}.
+avoidance \replaced[id = Paul]{is}{could be} in providing probabilistic advice
+on \deleted{likely} hotspots for species\deleted{occurrence and high species
+	density} which can inform fishing decisions. Previous modelling studies
+have shown how spatiotemporal models could improve predictions of high ratios
+of bycatch species to target species\cite{Ward2015, Cosandey-Godin2015,
+	Breivik2016}, and geostatistical models are well suited\deleted{to
+	this} as they incorporate spatial dependency while providing for
+probabilities to be drawn from posterior distributions of the parameter
+estimates. We posit\deleted{that} such advice could be enhanced by integrating
+data obtained directly from commercial fishing vessels at a higher temporal
+resolution, providing real-time forecasts to inform fishing choices that also
+captures seasonal differences in distributions\deleted{, akin to weather
+	forecasting}. \added{Such} advice\deleted{informed by a model including
+	a seasonal or real-time component} could inform optimal policies for
+time-area closures, move-on rules or even as informal information\deleted{to
+	be} utilised by fishers directly without\added{.}\deleted[id =
+Paul]{being reliant on costly continuous data collection on environmental
+	parameters}\deleted{, but by using the vessels-as-laboratories
+	approach}.
 
 An important question for the implementation of the EU's landing obligation is
 how far spatial avoidance can go to achieve catch balancing in fisheries. Our
@@ -557,9 +559,13 @@ less than the number of species modelled. The factor coefficients are then
 associated through a function for each factor that returns a positive or
 negative association of one or more species with any location. Log-density of
 any species is then be described as a linear combination of factors and
-loadings: \begin{equation} \theta_{c}(s,t) = \sum_{j=1}^{n_{j}}
+loadings: 
+
+\begin{equation} \theta_{c}(s,t) = \sum_{j=1}^{n_{j}}
 	L_{c,j}\psi_{j}(s,t) +\sum_{k=1}^{n_{k}} \gamma_{k,c}\chi_{k}(s,t)
-\end{equation} Where $\theta_{c}(s,t)$ represents log-density for species $c$
+\end{equation} 
+
+Where $\theta_{c}(s,t)$ represents log-density for species $c$
 at site $s$ at time $t$, $\psi_{j}$ is the coefficient for factor $j$,
 $L_{c,j}$ the loading matrix representing association of species $c$ with
 factor $j$ and $\gamma_{k,c}\chi_{k}(s,t)$ the linear effect of covariates at
@@ -571,7 +577,7 @@ and abundance of poorly sampled species through association with other species
 and allows for computation of spatio-temporal correlations among
 species\cite{Thorson2016b}.
 
-\added[id = brutus]{We use the resultant factor analysis is used to identify
+\added[id = brutus]{We use the resultant factor analysis\deleted{is used} to identify
 	community dynamics and drivers common among 18 species and results
 	presented through transformation of the loading matrices using PCA
 	rotation}. 
@@ -580,6 +586,7 @@ species\cite{Thorson2016b}.
 probability and positive catch rates are modelled separately with
 spatio-temporal encounter probability modelled using a logit-link linear
 predictor;
+
 		\begin{equation}
 			\begin{split}
 			logit[p(s_{i},c_{i},t_{i})] =	\beta_{p}(c_{i},t_{i}) +
@@ -590,7 +597,8 @@ predictor;
 		\end{split}
 		\end{equation}
 
-and positive catch rates modelling using a gamma- distribution\cite{Thorson2015a}. 
+and positive catch rates modelling using a gamma- distribution\cite{Thorson2015a}.
+
 		\begin{equation}
 			\begin{split}
 			log[r(s_{i},c_{i},t_{i})] = \beta_{r}(c_{i},t_{i}) +
@@ -615,6 +623,7 @@ $Q_{c_{i}, v_{i}}$ the catchability covariates for species $c$ and vessel $v$;
 $*$ can be either $p$ for probability of encounter or $r$ for positive density.
 
 The Delta-Gamma formulation is then:
+
 \begin{equation}
 	\begin{split}
 	& Pr(C = 0) = 1 - p \\
@@ -626,23 +635,25 @@ for the probability $p$ of a non-zero catch $C$ given a gamma distribution for
 for the positive catch with a rate parameter $\lambda$ and shape parameter $k$.
 
 \textbf{\textit{Spatio-temporal variation:}} The spatiotemporal variation is
-modelled using Gaussian Markov Random Fields (GMRF) where data is associated to
-nearby locations through a Matérn covariance function with the parameters
-estimated within the model. Here, the correlation decays smoothly over space
-the further from the location and includes geometric anisotropy to reflect the
-fact that correlations may decline in one direction faster than another (e.g.
-moving offshore)\cite{Thorson2013}.  The best fit estimated an anisotropic
-covariance where the correlations were stronger in a north-east - south-west
-direction, extending approximately 97 km and 140 km before correlations for
-encounter probability and positive density reduced to \textless 10 \%,
-respectively (Extended Data Fig. 9). Incorporating the spatiotemporal
-correlations among and within species provides more efficient use of the data
-as inference can be made about poorly sampled locations from the covariance
-structure.
+modelled using Gaussian Markov Random Fields (GMRF) \replaced[id = Paul]{where
+	observations are correlation in space}{where data is associated to
+	nearby locations} through a Matérn covariance function with the
+parameters estimated within the model. Here, the correlation decays smoothly
+over space the further from the location and includes geometric anisotropy to
+reflect the fact that correlations may decline in one direction faster than
+another (e.g.  moving offshore)\cite{Thorson2013}.  The best fit estimated an
+anisotropic covariance where the correlations were stronger in a north-east -
+south-west direction, extending approximately 97 km and 140 km before
+correlations for encounter probability and positive density reduced to
+\textless 10 \%, respectively (Extended Data Fig. 9). Incorporating the
+spatiotemporal correlations among and within species provides more efficient
+use of the data as inference can be made about poorly sampled locations from
+the covariance structure.
 
 A probability distribution for spatio-temporal variation in both encounter
 probability and positive catch rate was specified, $\varepsilon_{*}(s,p,t)$,
 with a three-dimensional multivariate normal distribution so that:
+
 	\begin{equation}
 		vec[\mathbf{E}_{*}(t)] \sim MVN(0,\mathbf{R}_{*} \otimes
 		\mathbf{V}_{{\varepsilon}{*}})
@@ -724,8 +735,9 @@ effect was estimated as a fixed covariate, iii) with vessel x species effect
 estimated, but with the addition of estimating fixed density covariates for
 both predominant habitat type at a knot and depth. AIC and BIC model selection
 favoured the second model (Extended Data Table 3). The final model included
-estimating 130,950 coefficients (1,674 fixed parameters and 129,276 random
-effect values).
+\replaced[id = Paul]{estimating 1,674 fixed parameters and predicting 129,276
+	random effect values}{estimating 130,950 coefficients (1,674 fixed
+	parameters and 129,276 random effect values)}.
 
 \subsection{Model validation}
 
