small change to extended data figure legends

--- a/docs/write_up/ExtendedDataTablesandFigures.tex
+++ b/docs/write_up/ExtendedDataTablesandFigures.tex
@@ -48,8 +48,8 @@
 \begin{subfigure}{0.5\textwidth}
 	\includegraphics[width = \linewidth]{"figures/Factor1_HabitatO1"}
 \end{subfigure}
-\caption{Left: Average spatial encounter probability factor 1 values correlated
-	against; Left - Depth, Right - substrate type}
+\caption{Left: Factor 1 values for average spatial encounter probability
+	correlated against; Left - Depth, Right - substrate type}
 
 \end{figure}
 
@@ -64,7 +64,7 @@
 \begin{subfigure}{0.5\textwidth}
 	\includegraphics[width = \linewidth]{"figures/Factor1_HabitatO2"}
 \end{subfigure}
-\caption{Left: Average spatial positive density factor 1 values correlated
+\caption{Left: Factor 1 values for average spatial positive density correlated
 	against; Left- Depth, Right- substrate type}
 
 \end{figure}
@@ -87,8 +87,8 @@
 \begin{center}
 	\includegraphics[width = 0.8\linewidth]{"figures/Suppl - SpatioTempLoadingsEpsilon1"}
 	\label{fig:S5}
-	\caption{Spatial Loadings for first three factors every five years for
-	spatio-temporal encounter probability}
+	\caption{Spatial loadings factor values for first three factors every
+		five years for spatio-temporal encounter probability}
 	\end{center}
 \end{figure}
 
@@ -96,8 +96,8 @@
 \begin{center}
 	\includegraphics[width = 0.8\linewidth]{"figures/Suppl - SpatioTempLoadingsEpsilon2"}
 	\label{fig:S7}
-	\caption{Spatial Loadings for first three factors every five years for
-	spatio-temporal density}
+	\caption{Spatial Loadings factor values for first three factors every
+		five years for spatio-temporal density}
 	\end{center}
 \end{figure}
 
@@ -107,7 +107,7 @@
 	\includegraphics[width = 0.6\linewidth]{"figures/Suppl - TempAndFactors"}
 	\label{fig:S6}
 	\caption{Association of temperature and knots (individual lines; top)
-		with Spatio-temporal factor loadings for encounter probability
+		with Spatio-temporal factor loading values for encounter probability
 	(middle) and density (bottom)}
 	\end{center}
 \end{figure}
@@ -149,8 +149,8 @@
 \begin{center}
 	\includegraphics[width = 0.9\linewidth]{"figures/Suppl - QEstimatesALL"}
 	\label{fig:S11}
-	\caption{Fixed effect estimates for surveys for each species-group. Note
-	all values within a species-group are relative to the CEXP survey}
+	\caption{Fixed effect estimates for surveys for each species. Note all
+		values within a species are relative to the CEXP survey}
 	\end{center}
 \end{figure}
 
