--- a/docs/write_up/JDM_mixed_fishery_letter.tex
+++ b/docs/write_up/JDM_mixed_fishery_letter.tex
@@ -804,7 +804,7 @@ co-occurrence and the strength of associations in space and time.
 		encounter probability and (b) Average positive density for the
 		species (outer figures) and spatially (inner figures).
 		Red: positive association to the factor, Blue: negative
-		association}
+		association.}
 \end{center}
 \end{figure}
 
