--- a/docs/write_up/JDM_mixed_fishery_letter.tex
+++ b/docs/write_up/JDM_mixed_fishery_letter.tex
@@ -69,7 +69,7 @@ In the example application to the highly mixed fisheries of the Celtic Sea,
 clear common spatial patterns emerge for three distinct species-groups. While
 distribution varies inter-annually, the same species-groups are consistently
 found in higher densities together, with more subtle differences within
-species-groups - where spatial separation may not be practically possible.
+species-groups, where spatial separation may not be practically possible.
 \deleted{The results highlight both opportunities for and limitations of the
 	ability to spatiotemporally separate catches.}
 %%  general context
@@ -92,7 +92,7 @@ globally remains static\cite{FAO2016}. With future increased demand for fish
 protein\deleted{\cite{B??n??2016}} there is an important role for well managed
 fisheries in supporting future food
 security\cite{Mcclanahan2015}\deleted[id=coilin]{and}\deleted{there}
-\replaced[id=coilin]{necessitating}{remains a need to ensure}fisheries are
+\replaced[id=coilin]{necessitating}{remains a need to ensure} fisheries are
 managed efficiently to maximise productivity.
 
 A\deleted[id = brutus]{particular} challenge in realising increased catches
@@ -104,7 +104,7 @@ fisheries\deleted{, the predominant type of fishery worldwide, several fish
 individual quotas, \replaced[id = brutus]{if}{and} catches do not match
 available stock quotas, either a vessel must stop fishing when the first quota
 is reached (the `choke' species) or overexploitation of the weaker species
-occurs while fishers \deleted{continue to} catch more healthy species and throw
+occurs while fishers\deleted{continue to} catch more healthy species and throw
 back (`discard') the fish for which they have no quota\cite{Batsleer2015}.
 There is\deleted{, therefore,} a pressing need for scientific tools that
 simplify the complexities of mixed fisheries to help \replaced[id =
@@ -129,8 +129,8 @@ the respective stock quota\deleted{; second, by 2020 all fish stocks must be
 	%income or the
 continuance of traditional practices.}\deleted{Under the new policy,}Unless
 fishers can avoid catch of unwanted species they will have to stop fishing when
-reaching their first restrictive quota,\deleted{. This} introducing a
-\deleted{potential} significant cost to\deleted{fishers of} under-utilised
+reaching their first restrictive quota,\deleted{. This} introducing
+a\deleted{potential} significant cost to\deleted{fishers of} under-utilised
 quota\cite{Ulrich2016} and\deleted{provides} strong incentive to mitigate such
 losses\cite{Condie2013}. 
 
@@ -156,7 +156,7 @@ community interactions\deleted{combining}; \deleted{The design of
 	spatio-temporal management measures which aim to allow exploitation of
 	high quota stocks while protecting low quota stocks requires
 	understanding of these interactions at a scale meaningful to managers
-	and fishers.}\deleted{Here,} our goal is to develop a framework for
+	and fishers.}\deleted{Here,}our goal is to develop a framework for
 understanding these complexities. We do so by 1) implementing a spatiotemporal
 dimension reduction method, 2) using\deleted{the} results to draw inference on
 the fishery-community dynamics, 3) creating a framework to identify trends common
@@ -177,7 +177,7 @@ by \deleted{employing a geostatistical Vector Autoregressive Spatiotemporal
 	model (VAST). We}implement\added{ing} a factor analysis decomposition
 to describe trends in spatiotemporal dynamics of the different species as a
 function of latent variables\cite{Thorson2015} representing spatial variation
-(9 factors; \deleted{which we call} 'average' spatial variation) and
+(9 factors;\deleted{which we call} 'average' spatial variation) and
 spatio-temporal variation (9 factors) for encounter probability and positive
 catch rates (\deleted{which we call} 'positive density')
 separately\cite{Thorson2015a}. \added{This allows us to} \deleted{By describing
@@ -189,7 +189,7 @@ within and among species groups for both encounter probability and positive
 density\cite{Thorson2013}.\deleted{VAST is set in a mixed modelling framework
 	to allow estimation of} Fixed effects\deleted{to} account for
 systematic differences driving encounter and catches\deleted{,} such as
-differences in sampling efficiency (a.k.a.  catchability), while random effects
+differences in sampling efficiency (a.k.a. catchability), while random effects
 capture the spatio-temporal dynamics of the fish community.
 
 \subsection{Dynamics of Celtic Sea fisheries}\deleted{We use the highly mixed
@@ -211,7 +211,7 @@ commercial species (see Extended Data Table 2, Fig. 2) \deleted{: Atlantic cod
 		whiffiagonis}), European Plaice (\textit{Pleuronectes
 		platessa}) and Common Sole (\textit{Solea solea}). These
 	species} which make up \textgreater 60 \% of landings by towed fishing
-gears for the area (average 2011 - 2015;\cite{STECF2017}). Each species was
+gears for the area (average 2011 - 2015\cite{STECF2017}). Each species was
 separated into juvenile and adult size classes based on their legal minimum
 conservation reference size (Extended Data Table 2).
 
@@ -298,7 +298,7 @@ brutus]{, as identified in other marine species distribution
 	there are clear spatial patterns in the factor coefficients describing
 	differences in average (over time) encounter probability and positive
 	density (Fig. 1),}\deleted{The} Inter-annual differences in factor
-coefficients show less structure (Extended Data Figs. 5,6). These inter-annual
+coefficients show less structure (Extended Data Figs. 5, 6). These inter-annual
 differences are important as they reflect the ability of fishers to predict
 where they can target species from one year to the next.\deleted{, without
 	which it may be difficult to avoid unwanted catch}\deleted{There were,
@@ -466,14 +466,14 @@ spatial separation of catches is \deleted[id = brutus]{much more challenging
 the selectivity characteristics of gear\cite{Santos2016}. 
 
 A role that science can play in supporting effectiveness of spatiotemporal
-avoidance \replaced[id = Paul]{is}{could be} in providing probabilistic advice
-on \deleted{likely} hotspots for species\deleted{occurrence and high species
+avoidance \replaced[id = Paul]{is}{could be}in providing probabilistic advice
+on\deleted{likely} hotspots for species\deleted{occurrence and high species
 	density} which can inform fishing decisions. Previous modelling studies
 have shown how spatiotemporal models could improve predictions of high ratios
 of bycatch species to target species\cite{Ward2015, Cosandey-Godin2015,
 	Breivik2016}, and geostatistical models are well suited\deleted{to
 	this} as they incorporate spatial dependency while providing for
-probabilities to be drawn from posterior distributions of the parameter
+probabilities to be drawn from posterior distributions of parameter
 estimates. We posit\deleted{that} such advice could be enhanced by integrating
 data obtained directly from commercial fishing vessels at a higher temporal
 resolution, providing real-time forecasts to inform fishing choices that also
@@ -481,27 +481,27 @@ captures seasonal differences in distributions\deleted{, akin to weather
 	forecasting}. \added{Such} advice\deleted{informed by a model including
 	a seasonal or real-time component} could inform optimal policies for
 time-area closures, move-on rules or even as informal information\deleted{to
-	be} utilised by fishers directly without\added{.}\deleted[id =
+	be} utilised by fishers directly\added{.}\deleted[id =
 Paul]{being reliant on costly continuous data collection on environmental
 	parameters}\deleted{, but by using the vessels-as-laboratories
-	approach}.
+	approach}
 
 An important question for the implementation of the EU's landing obligation is
 how far spatial avoidance can go to achieve catch balancing in fisheries. Our
-model captures differences between location fished for two gear types and
-\deleted{their} broad scale effect on catch composition\deleted{, information
-	crucial for managers in implementing the landing
+model captures differences between location fished for two gear types
+and\deleted{their} broad scale effect on catch composition\deleted{,
+	information crucial for managers in implementing the landing
 	obligation}.\deleted{Results of} Empirical studies\deleted{undertaken
 	elsewhere}\cite{Branch2008, Kuriyama2016} suggest limits to the
-effectiveness of spatial avoidance. Differences in ability to change catch
-composition have also been observed for different fleets\deleted{; in the North
-	Sea targeting ability was found to differ between otter and beam
-	trawlers as well as between vessels of different
-	sizes}\cite{Pascoe2007}.\deleted{It is likely}\deleted{, however, that}
-\added{This} analysis \added{likely} reflects a lower bound on \deleted[id =
-coilin]{the utility of spatial} avoidance as fine-scale behavioural decisions
-such as time-of-day, gear configuration and location choices can also be used
-to affect catch\cite{Abbott2015, Thorson2016}.
+effectiveness of spatial avoidance, with differences in ability to change catch
+composition observed for different fleets\deleted{; in the North Sea targeting
+	ability was found to differ between otter and beam trawlers as well as
+	between vessels of different sizes}\cite{Pascoe2007}.\deleted{It is
+	likely}\deleted{, however, that} \added{This} analysis \added{likely}
+reflects a lower bound on\deleted[id = coilin]{the utility of spatial}
+avoidance as fine-scale behavioural decisions such as time-of-day, gear
+configuration and location choices can also be used to affect
+catch\cite{Abbott2015, Thorson2016}.
 
 \deleted{Our framework allows for a quantitative understanding of the broad
 	scale global production set available to fishers\cite{Reimer2017} and
