--- a/docs/write_up/Science_Submission/spat_sep_mixed_fishery_report.tex
+++ b/docs/write_up/Science_Submission/spat_sep_mixed_fishery_report.tex
@@ -71,37 +71,41 @@
 
 % Place your abstract within the special {sciabstract} environment.
 \begin{sciabstract}
-Mixed fisheries capture a mix of species at the same time and are the dominant
-type of fishery worldwide.  Overexploitation in mixed fisheries occurs when
+	\deleted{Mixed fisheries capture a mix of species at the same time and are the dominant
+type of fishery worldwide. }Overexploitation in mixed fisheries occurs when
 catches continue for available quota species while low quota species are
 discarded\deleted{\cite{Batsleer2015}}. As EU fisheries management moves to count all fish
 caught against quota (the `landings obligation'), the challenge is to catch
-available quota within new constraints, else lose productivity.  
+available quota within new constraints\deleted{, else lose productivity}.
 %% More detailed background
 A mechanism for decoupling exploitation of species caught together is spatial
-targeting, but this remains challenging due to complex fishery and population
-dynamics in space and time\deleted{\cite{Branch2008, Dunn2014a}}. 
+targeting, \replaced[id = Paul]{which is}{but this remains} challenging due to
+complex \added{spatiotemporal} fishery and population
+dynamics\deleted{in space and time}\deleted{\cite{Branch2008, Dunn2014a}}.
 %% General problem
-How far spatial targeting can go to practically separate species is often
-unknown and anecdotal.
+\deleted{How far spatial targeting can go to practically separate species is often
+unknown and anecdotal.}
 %% Summarising the main result
-Here we develop a dimension-reduction framework based on joint species
-distribution modelling (spatial dynamic factor analysis) to understand how
-spatial community and fishery dynamics interact to determine species and size
+\deleted{Here w}\added{W}e develop a dimension-reduction framework \deleted{based on joint species
+distribution modelling (spatial dynamic factor analysis)}to understand how
+spatial community and fishery dynamics\deleted{interact to} determine species and size
 composition.  
 %%	 Two or three sentences explaining what the main result
-In the example application to the highly mixed fisheries of the Celtic Sea,
-clear common spatial patterns emerge for three distinct species-groups. While
-distribution varies inter-annually, the same species-groups are consistently
-found in higher densities together, with more subtle differences within
-species-groups, where spatial separation may not be practically possible.
-\deleted{The results highlight both opportunities for and limitations of the
-	ability to spatiotemporally separate catches.}
+\deleted{In the example a}\added{A}pplication to the highly mixed fisheries of
+the Celtic Sea \replaced[id = Paul]{shows}{,}
+clear common spatial patterns emerge for three\deleted{distinct}
+species-groups.\deleted{While distribution varies inter-annually, the same
+	species-groups are consistently found in higher densities together,
+	with more subtle differences within species-groups, where spatial
+	separation may not be practically possible.}\deleted{The results
+	highlight both opportunities for and limitations of the ability to
+	spatiotemporally separate catches.}
 %%  general context
 We highlight the importance of dimension reduction techniques to focus
-management discussion on axes of maximal separation in space and time. We
+\deleted{management discussion}on axes of maximal
+\added{spatiotemporal} separation\deleted{ in space and time. We
 propose that spatiotemporal modelling of available data is a scientific
-necessity to address the pervasive and nuanced challenges of managing mixed
+necessity} to address the pervasive and nuanced challenges of managing mixed
 fisheries.  
 \end{sciabstract}
 
@@ -231,7 +235,7 @@ Celtic Sea, with approximately 30 species dominating the catch\cite{Mateo2016}.
 We parameterise our\deleted{spatiotemporal} model using catch data from seven
 fisheries-independent surveys undertaken\deleted{in the Celtic Sea} over the
 period 1990 - 2015 (Table S1) and include nine of the main
-commercial species (see Table S2, Fig. 2) \deleted{: Atlantic cod
+commercial species (see Table S2) \deleted{: Atlantic cod
 	(\textit{Gadus morhua}), Atlantic haddock (\textit{Melanogrammus
 		aeglefinus}), Atlantic whiting (\textit{Merlangius merlangus}),
 	European Hake (\textit{Merluccius merluccius}), white-bellied
@@ -566,9 +570,6 @@ anecdotal knowledge of single-species distribution in space and time.
 
 \newpage
 
-%% Here is the endmatter stuff: Supplementary Info, etc.
-%% Use \item's to separate, default label is "Acknowledgements"
-
 \section*{Acknowledgements}
 
 Paul J Dolder gratefully acknowledges funding support from the MARES joint
@@ -595,10 +596,11 @@ authors declare that they have no competing financial interests.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section*{Supplementary materials}
+Supplementary Text \\
 Materials and Methods\\
 Figs. S1 to S6\\
 Tables S1 to S2\\
-References \textit{(27-33)}
+References \textit{(27-34)}
 
 %%%
 
